# bazel-monorepo

./: .bazelignore  .bazelrc  .gitignore  LICENSE  MODULE.bazel  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sonar-project.properties  taskfile.yml
.aspect/rules/external_repository_action_cache/: npm_translate_lock_LTE4Nzc1MDcwNjU=
.github/workflows/: ci.workflow.yml
apps/js-api-items/: BUILD.bazel  jest.config.json  package.json  taskfile.yml
apps/js-api-items/src/: main.js  main.test.js
apps/js-api-items/src/api/controller/: greeting.int.test.js  index.js  root.controller.js
apps/js-api-items/src/api/controller/product/: create-product.int.test.js  delete-product.int.test.js  get-product.int.test.js  list-product.int.test.js  list-products.int.test.js  product.controller.js  update-product.int.test.js
apps/js-api-items/src/api/model/: product.model.js
apps/js-api-items/src/api/repository/: product.repository.js
apps/js-api-items/src/api/service/product/: create-product.service.js  delete-product.service.js  get-product.service.js  index.js  list-products.service.js  update-product.service.js
apps/js-api-items/src/core/database/: database.js
apps/js-api-items/src/core/injection/: index.js  injection.config.js  injection.types.js
apps/js-api-items/src/core/server/: express.config.js  express.unit.test.js  index.js  server.runner.js
apps/js-api-items/test/: jest.setup.js
apps/js-legacy-api-items/: BUILD.bazel  package.json  taskfile.yml
apps/js-legacy-api-items/src/: main.js  main.test.js
apps/js-legacy-api-items/src/message/: message.js
tools/utils/: date.bzl
