"""
# =======================================
# Bazel Monorepo Configuration
# =======================================
"""
module(
    name    = "bazel-monorepo",
    version = "1.0",
)

# =======================================
# Dependências para JavaScript
# =======================================

bazel_dep(name = "aspect_rules_js", version = "2.1.0")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name                          = "npm",
    pnpm_lock                     = "//:pnpm-lock.yaml",
    verify_node_modules_ignored   = "//:.bazelignore",
    npmrc                         = "//:.npmrc"
)

use_repo(npm, "npm")
