"""
# =======================================
# Bazel Monorepo Configuration
# =======================================
"""
module(
    name    = "bazel-monorepo",
    version = "1.0",
)


# =======================================
# Dependências Básicas do Bazel
# =======================================

# Regras gerais e bibliotecas utilitárias
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.13.0", dev_dependency = True)


# =======================================
# Dependências para JavaScript
# =======================================

bazel_dep(name = "aspect_rules_js", version = "2.1.0")
bazel_dep(name = "aspect_rules_jest", version = "0.22.0")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name                          = "npm",
    pnpm_lock                     = "//:pnpm-lock.yaml",
    verify_node_modules_ignored   = "//:.bazelignore",
    npmrc                         = "//:.npmrc"
)

use_repo(npm, "npm")
