"""
# =======================================
# Bazel Monorepo Configuration
# =======================================
"""
module(
    name    = "bazel-monorepo",
    version = "1.0",
)


# =======================================
# Dependências Básicas do Bazel
# =======================================

# Regras gerais e bibliotecas utilitárias
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.13.0", dev_dependency = True)


# =======================================
# Dependências OCI (Imagens de Contêiner)
# =======================================

bazel_dep(name = "rules_oci", version = "2.2.0")
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

oci.pull(
    name      = "ubuntu",
    tag       = "plucky-20241213",
    digest    = "sha256:008b026f11c0b5653d564d0c9877a116770f06dfbdb36ca75c46fd593d863cbc",
    image     = "ubuntu",
    platforms = ["linux/amd64"],
)

use_repo(oci, "ubuntu")

# =======================================
# Dependências para JavaScript
# =======================================

bazel_dep(name = "aspect_rules_js", version = "2.1.0")
bazel_dep(name = "aspect_rules_jest", version = "0.22.0")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name                          = "npm",
    pnpm_lock                     = "//:pnpm-lock.yaml",
    verify_node_modules_ignored   = "//:.bazelignore",
    npmrc                         = "//:.npmrc",
    data = ["//:package.json"],
    update_pnpm_lock = True,
)

use_repo(npm, "npm")
